feat(cleanup): Complete Node.js/Bun cleanup - remove all legacy references
- Remove bun.lock file completely
- Update CLAUDE.md: Gluegun → Deno + Cliffy references throughout
- Fix GitHub issue templates: Node.js/Bun → Deno version requirements
- Update GitHub workflows:
  * claude-code-action: bun commands → deno task commands
  * claude-code-review: Gluegun → Cliffy architecture awareness
  * release.yml: temporarily disabled for Deno migration
  * dependabot.yml: disabled Bun packages (URL imports used)
  * Remove ci-node-backup.yml (obsolete Node.js backup)
- Rewrite docs/plugins.md: Gluegun plugins → Deno + Cliffy extensions
- Rewrite PUBLISHING.md: npm publishing → JSR + binary distribution
- Security improvements: Deno permission model documented
- Architecture documentation updated throughout

RESULT: Zero Node.js/Bun/npm references remain in active codebase
✅ Complete migration to Deno + Cliffy + JSR ecosystem

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,37 +1,9 @@
 version: 2
 updates:
-  # Enable version updates for npm
-  - package-ecosystem: "bun"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 10
-    reviewers:
-      - "gander" # Replace it with actual GitHub username
-    assignees:
-      - "gander" # Replace it with actual GitHub username
-    commit-message:
-      prefix: "chore"
-      prefix-development: "chore"
-      include: "scope"
-    labels:
-      - "dependencies"
-    groups:
-      # Group all patch updates together
-      patch-updates:
-        patterns:
-          - "*"
-        update-types:
-          - "patch"
-      # Group dev dependencies minor updates
-      dev-dependencies:
-        patterns:
-          - "*"
-        dependency-type: "development"
-        update-types:
-          - "minor"
+  # DISABLED: Deno uses URL-based imports, no package.json dependencies
+  # - package-ecosystem: "bun" 
+  # Deno dependencies are managed via URL imports in deno.json
+  # No automatic updates needed - manual review preferred for security
 
   # Enable version updates for GitHub Actions
   - package-ecosystem: "github-actions"
