fix(ci): Fix version test regex for Cliffy CLI output format
- Integration test expected bare semver (0.0.1) but Cliffy outputs 'mikrus 0.0.1'
- Changed regex from ^[0-9]+\.[0-9]+\.[0-9]+ to [0-9]+\.[0-9]+\.[0-9]+
- Matches Cliffy's default version output format with CLI name prefix
- Resolves integration test failure in Deno CI/CD pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -277,7 +277,7 @@ jobs:
           output=$(./build/mikrus-linux --version)
           echo "Version output: $output"
           
-          if ! echo "$output" | grep -E "^[0-9]+\.[0-9]+\.[0-9]+"; then
+          if ! echo "$output" | grep -E "[0-9]+\.[0-9]+\.[0-9]+"; then
             echo "❌ ERROR: Version output does not match expected format (semver)"
             exit 1
           fi
