fix(deno): remove Bun/npm remnants and configure for main-deno branch
- Remove node_modules from deno.json exclude list
- Enable lefthook with Deno-native commands (deno lint/fmt)
- Update CI workflow to target main-deno branch instead of feature branch
- Fix workflow path reference from deno-ci.yml to ci.yml
- Prepare for deployment to main-deno as primary Deno branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,14 @@ name: "🦕 Deno CI/CD Pipeline"
 
 on:
   push:
-    branches: [ feature/deno-cliffy-experiment ]
+    branches: [ main-deno ]
   pull_request:
-    branches: [ main ]
+    branches: [ main-deno ]
     paths:
       - 'deno.json'
       - 'src/**'
       - 'tests/**'
-      - '.github/workflows/deno-ci.yml'
+      - '.github/workflows/ci.yml'
   workflow_dispatch:
 
 concurrency:
