fix(workflow): update job name comment to match Node Test Suite format
- Updates comment on line 89 to align with Node-prefixed job naming convention
- Improves consistency between job names and documentation
- Addresses minor improvement suggestion from Claude code review

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -85,7 +85,7 @@ jobs:
             ${{ runner.os }}-build-
 
   node-test:
-    name: "⚡ Test Suite: Node ${{ matrix.node-version }}"
+    name: "⚡ Node Test Suite: Node ${{ matrix.node-version }}"
     # Runs Vitest tests across Node.js 20+22, generates coverage for Node 20
     runs-on: ubuntu-latest
     permissions:
