--- a/.github/workflows/deno-release.yml
+++ b/.github/workflows/deno-release.yml
@@ -20,8 +20,8 @@ permissions:
   id-token: write  # Required for JSR provenance
 
 jobs:
-  validate-tag:
-    name: "🏷️ Validation: Verify Tag Format"
+  deno-validate-tag:
+    name: "🦕 Deno Validation: Verify Tag Format"
     runs-on: ubuntu-latest
     steps:
       - name: "📥 Repository: Checkout Code"
@@ -61,10 +61,10 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
 
-  check-ci-status:
-    name: "🔍 Pre-flight: Deno CI Verification"
+  deno-check-ci-status:
+    name: "🦕 Deno Pre-flight: Deno CI Verification"
     runs-on: ubuntu-latest
-    needs: [validate-tag]
+    needs: [deno-validate-tag]
     steps:
       - name: "✅ Validation: Verify Deno CI Success"
         uses: actions/github-script@v7
@@ -91,10 +91,10 @@ jobs:
             
             console.log('✅ Deno CI Pipeline passed successfully');
 
-  build-binaries:
-    name: "🏗️ Build: Multi-platform Binaries"
+  deno-build-binaries:
+    name: "🦕 Deno Build: Multi-platform Binaries"
     runs-on: ubuntu-latest
-    needs: [check-ci-status]
+    needs: [deno-check-ci-status]
     strategy:
       matrix:
         target:
@@ -154,10 +154,10 @@ jobs:
             mikrus-${{ matrix.target.name }}${{ matrix.target.ext }}.sha256
           retention-days: 90
 
-  create-release:
-    name: "🚀 GitHub: Create Release"
+  deno-create-release:
+    name: "🦕 Deno GitHub: Create Release"
     runs-on: ubuntu-latest
-    needs: [build-binaries]
+    needs: [deno-build-binaries]
     outputs:
       release_url: ${{ steps.create_release.outputs.upload_url }}
       version: ${{ steps.get_version.outputs.VERSION }}
@@ -235,11 +235,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  publish-jsr:
-    name: "📦 JSR: Publish Package"
+  deno-publish-jsr:
+    name: "🦕 Deno JSR: Publish Package"
     runs-on: ubuntu-latest
-    needs: [create-release]
-    if: ${{ !contains(needs.create-release.outputs.version, '-') }}  # Only for stable releases
+    needs: [deno-create-release]
+    if: ${{ !contains(needs.deno-create-release.outputs.version, '-') }}  # Only for stable releases
     steps:
       - name: "📥 Repository: Checkout Code"
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
@@ -259,17 +259,17 @@ jobs:
 
       - name: "✅ Verification: Confirm JSR Publication"
         run: |
-          VERSION="${{ needs.create-release.outputs.version }}"
+          VERSION="${{ needs.deno-create-release.outputs.version }}"
           echo "Waiting for JSR package propagation..."
           sleep 30
           
           # Verify package is available (when JSR API supports it)
           echo "Package published: https://jsr.io/@gander/mikrus@$VERSION"
 
-  integration-test:
-    name: "🧪 Integration: Test Released Binaries"
+  deno-integration-test:
+    name: "🦕 Deno Integration: Test Released Binaries"
     runs-on: ${{ matrix.os }}
-    needs: [create-release]
+    needs: [deno-create-release]
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -283,7 +283,7 @@ jobs:
     steps:
       - name: "📥 Download: Binary from Release"
         run: |
-          VERSION="${{ needs.create-release.outputs.version }}"
+          VERSION="${{ needs.deno-create-release.outputs.version }}"
           DOWNLOAD_URL="https://github.com/gander-tools/mikrus/releases/download/v$VERSION/${{ matrix.binary }}"
           
           if [ "$RUNNER_OS" = "Windows" ]; then
