--- a/.github/workflows/deno-issue-auto-tagger.yml
+++ b/.github/workflows/deno-issue-auto-tagger.yml
@@ -1,4 +1,4 @@
-name: "🏷️ AI Issue Auto-Tagger"
+name: "🦕 Deno AI Issue Auto-Tagger"
 
 on:
   issues:
@@ -9,8 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  auto-tag-issues:
-    name: "🤖 Analyze and Tag Issues"
+  deno-auto-tag-issues:
+    name: "🦕 Deno Analyze and Tag Issues"
     runs-on: ubuntu-latest
     if: github.repository == 'gander-tools/mikrus'
     
