--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -1,4 +1,4 @@
-name: "🏁 Production Release & Publishing"
+name: "⚡ Node Release & NPM Publishing"
 
 # Production release workflow with GitHub Release and NPM publishing
 # Triggers: Git tags matching v*.*.* (semantic versioning)
@@ -19,8 +19,8 @@ permissions:
   contents: write
 
 jobs:
-  validate-tag:
-    name: "🏷️ Validation: Verify Tag Exists"
+  node-validate-tag:
+    name: "⚡ Node Validation: Verify Tag Exists"
     # Validates that the specified version corresponds to an existing git tag
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
@@ -52,12 +52,12 @@ jobs:
             exit 1
           fi
 
-  check-ci-status:
-    name: "🔍 Pre-flight: CI Pipeline Verification"
+  node-check-ci-status:
+    name: "⚡ Node Pre-flight: CI Pipeline Verification"
     # Ensures CI pipeline passed successfully before allowing release
     runs-on: ubuntu-latest
-    needs: [validate-tag]
-    if: always() && (needs.validate-tag.result == 'success' || needs.validate-tag.result == 'skipped')
+    needs: [node-validate-tag]
+    if: always() && (needs.node-validate-tag.result == 'success' || needs.node-validate-tag.result == 'skipped')
     steps:
       - name: "✅ Validation: Verify CI Success for Tag Commit"
         # Queries GitHub API to confirm CI workflow completed successfully for this commit
@@ -85,12 +85,12 @@ jobs:
             
             console.log('✅ CI Pipeline passed successfully');
 
-  build-and-release:
-    name: "🏗️ GitHub: Build & Create Release"
+  node-build-and-release:
+    name: "⚡ Node GitHub: Build & Create Release"
     # Creates production build, archives, checksums, and GitHub release
     runs-on: ubuntu-latest
-    needs: [check-ci-status]
-    if: always() && needs.check-ci-status.result == 'success'
+    needs: [node-check-ci-status]
+    if: always() && needs.node-check-ci-status.result == 'success'
     steps:
       - name: "📥 Repository: Full History Checkout"
         # Downloads complete git history for changelog and version extraction
@@ -204,11 +204,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build-and-test:
-    name: "🧪 Integration: CLI End-to-End Validation"
+  node-build-and-test:
+    name: "⚡ Node Integration: CLI End-to-End Validation"
     # Comprehensive build and integration testing before NPM publication
     runs-on: ubuntu-latest
-    needs: [check-ci-status]
+    needs: [node-check-ci-status]
     permissions:
       contents: read
     steps:
@@ -275,11 +275,11 @@ jobs:
             exit 1
           fi
 
-  publish-npm:
-    name: "📦 NPM: Publish with Provenance"
+  node-publish-npm:
+    name: "⚡ Node NPM: Publish with Provenance"
     # NPM publication with cryptographic provenance and integrity verification
     runs-on: ubuntu-latest
-    needs: [build-and-release, build-and-test]
+    needs: [node-build-and-release, node-build-and-test]
     if: startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')
     permissions:
       contents: read
