--- a/.github/workflows/deno-dependabot-auto-merge.yml
+++ b/.github/workflows/deno-dependabot-auto-merge.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: "📊 Metadata: Extract Update Information"
         # Retrieves dependency update details (type, version change, dependency scope)
-        id: metadata
+        id: deno_metadata
         uses: dependabot/fetch-metadata@dbb158d5c31b2b8bd1617a99da8524c8b2ebe5cb # v2.4.0
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
