fix(workflows): add comprehensive deno_ prefixed step IDs to all GitHub Actions workflows
- Add unique step IDs to ALL steps across 6 workflow files
- Use consistent deno_ prefix for project-wide ID uniqueness
- Replace hyphens with underscores for naming consistency
- Update cross-references to use new step ID naming

Modified workflows:
- deno-ci.yml: 28 steps with deno_ci_ + deno_[job]_ prefixes
- deno-release.yml: 25 steps with deno_release_ + deno_jsr_ + deno_integration_ prefixes
- deno-claude-code-review.yml: 2 steps with deno_claude_review prefix
- deno-dependabot-auto-merge.yml: 4 steps with deno_dependabot_ prefix
- deno-issue-auto-tagger.yml: 3 steps with deno_issue_ prefix
- deno-comprehensive-security-audit.yml: 20 steps with deno_security_ prefixes

All step IDs are now globally unique and follow consistent naming convention

--- a/.github/workflows/deno-issue-auto-tagger.yml
+++ b/.github/workflows/deno-issue-auto-tagger.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - name: "🔍 Analyze Issue Content"
-        id: deno_analyze
+        id: deno_issue_analyze
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         with:
           script: |
@@ -123,11 +123,12 @@ jobs:
             };
 
       - name: "🏷️ Apply Labels to Issue"
-        if: fromJSON(steps.analyze.outputs.result).shouldTag
+        id: deno_issue_apply_labels
+        if: fromJSON(steps.deno_issue_analyze.outputs.result).shouldTag
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         with:
           script: |
-            const result = JSON.parse('${{ steps.analyze.outputs.result }}');
+            const result = JSON.parse('${{ steps.deno_issue_analyze.outputs.result }}');
             const suggestedLabels = result.labels;
             
             if (suggestedLabels.length === 0) {
@@ -201,12 +202,13 @@ jobs:
             }
 
       - name: "📊 Issue Triage Summary"
+        id: deno_issue_triage_summary
         if: always()
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         with:
           script: |
             const issue = context.payload.issue;
-            const analyzeResult = '${{ steps.analyze.outputs.result }}';
+            const analyzeResult = '${{ steps.deno_issue_analyze.outputs.result }}';
             const result = analyzeResult ? JSON.parse(analyzeResult) : {};
             
             console.log('=== ISSUE TRIAGE SUMMARY ===');
