--- a/.github/workflows/deno-ci.yml
+++ b/.github/workflows/deno-ci.yml
@@ -32,14 +32,17 @@ jobs:
       contents: read
     steps:
       - name: "📥 Repository: Checkout Code"
+        id: deno_checkout_lint
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: "🦕 Runtime: Setup Deno Environment"
+        id: deno_setup_lint
         uses: denoland/setup-deno@0df5d9c641efdff149993c321fc27c11c5df8623 # v1
         with:
           deno-version: v2.x
 
       - name: "💾 Cache: Restore Deno Dependencies"
+        id: deno_cache_dependencies_lint
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4
         with:
           path: |
@@ -50,20 +53,24 @@ jobs:
             ${{ runner.os }}-deno-
 
       - name: "📦 Dependencies: Cache and Download"
+        id: deno_cache_download_lint
         # Pre-download and cache all dependencies
         run: |
           deno cache src/cli.ts
           deno cache tests/generate-security.test.ts
 
       - name: "✨ Code Quality: Deno Lint Check"
+        id: deno_lint_check
         # Validates code style and potential issues using Deno's built-in linter
         run: deno lint src/ tests/
 
       - name: "🎨 Code Quality: Deno Format Check"
+        id: deno_format_check
         # Validates code formatting using Deno's built-in formatter
         run: deno fmt --check src/ tests/
 
       - name: "🔍 Code Quality: TypeScript Type Check"
+        id: deno_type_check_lint
         # Validates TypeScript types without running the code
         run: deno check src/cli.ts tests/generate-security.test.ts
 
@@ -85,14 +92,17 @@ jobs:
             coverage: false
     steps:
       - name: "📥 Repository: Checkout Code"
+        id: deno_checkout_test
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: "🦕 Runtime: Setup Deno ${{ matrix.deno-version }}"
+        id: deno_setup_test
         uses: denoland/setup-deno@0df5d9c641efdff149993c321fc27c11c5df8623 # v1
         with:
           deno-version: ${{ matrix.deno-version }}
 
       - name: "💾 Cache: Restore Deno Dependencies"
+        id: deno_cache_dependencies_test
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4
         with:
           path: |
@@ -104,20 +114,24 @@ jobs:
             ${{ runner.os }}-deno-
 
       - name: "📦 Dependencies: Cache and Download"
+        id: deno_cache_download_test
         run: |
           deno cache src/cli.ts
           deno cache tests/generate-security.test.ts
 
       - name: "🧪 Quality: Execute Deno Test Suite"
+        id: deno_execute_tests
         run: deno test --allow-read --allow-write --coverage
 
       - name: "📊 Quality: Generate Coverage Report"
+        id: deno_generate_coverage
         if: matrix.coverage == true
         run: |
           deno coverage coverage/ --lcov --output=coverage.lcov
           deno coverage coverage/ --html
 
       - name: "📤 Artifacts: Upload Coverage Report"
+        id: deno_upload_coverage
         if: matrix.coverage == true
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
@@ -151,17 +165,21 @@ jobs:
             output: mikrus-macos-arm64
     steps:
       - name: "📥 Repository: Checkout Code"
+        id: deno_checkout_build
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: "🦕 Runtime: Setup Deno Environment"
+        id: deno_setup_build
         uses: denoland/setup-deno@0df5d9c641efdff149993c321fc27c11c5df8623 # v1
         with:
           deno-version: v2.x
 
       - name: "📦 Dependencies: Cache and Download"
+        id: deno_cache_download_build
         run: deno cache src/cli.ts
 
       - name: "🔨 Build: Compile to Single Binary"
+        id: deno_compile_binary
         run: |
           deno compile \
             --allow-read \
@@ -172,6 +190,7 @@ jobs:
             src/cli.ts
 
       - name: "🧪 Build: Quick Binary Test (Linux only)"
+        id: deno_test_binary
         if: matrix.target == 'x86_64-unknown-linux-gnu'
         run: |
           chmod +x build/${{ matrix.output }}
@@ -180,6 +199,7 @@ jobs:
           ./build/${{ matrix.output }} --version
 
       - name: "📤 Artifacts: Upload Binary"
+        id: deno_upload_binary
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: binary-${{ matrix.target }}
@@ -196,14 +216,17 @@ jobs:
     needs: [deno-build]
     steps:
       - name: "📥 Repository: Checkout Code"
+        id: deno_checkout_security
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: "🦕 Runtime: Setup Deno Environment"
+        id: deno_setup_security
         uses: denoland/setup-deno@0df5d9c641efdff149993c321fc27c11c5df8623 # v1
         with:
           deno-version: v2.x
 
       - name: "🔍 Security: Deno Dependency Audit"
+        id: deno_dependency_audit
         run: |
           echo "🔍 Checking for known vulnerabilities in dependencies..."
           # Note: Deno doesn't have a built-in audit command yet, but we can check deps
@@ -211,6 +234,7 @@ jobs:
           deno info src/cli.ts
 
       - name: "🔒 Security: Permission Analysis"
+        id: deno_permission_analysis
         run: |
           echo "🔒 Analyzing required permissions..."
           echo "Required permissions for this CLI:"
@@ -221,6 +245,7 @@ jobs:
           echo "✅ All permissions are minimal and necessary for functionality"
 
       - name: "🛡️ Security: Code Security Scan"
+        id: deno_code_security_scan
         run: |
           echo "🛡️ Running basic security checks..."
           # Check for common security issues in TypeScript code
@@ -236,18 +261,22 @@ jobs:
     needs: [deno-build]
     steps:
       - name: "📥 Repository: Checkout Code"
+        id: deno_checkout_integration
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: "📥 Artifacts: Download Linux Binary"
+        id: deno_download_binary
         uses: actions/download-artifact@87c55149d96e628cc2ef7e6fc2aab372015aec85 # v4.1.3
         with:
           name: binary-x86_64-unknown-linux-gnu
           path: build/
 
       - name: "⚙️ Setup: Make Binary Executable"
+        id: deno_make_executable
         run: chmod +x build/mikrus-linux
 
       - name: "🔍 Integration: CLI Help Command Test"
+        id: deno_test_help_command
         run: |
           echo "🔍 Testing CLI help command..."
           output=$(./build/mikrus-linux --help)
@@ -272,6 +301,7 @@ jobs:
           echo "✅ Help command test passed"
 
       - name: "📋 Integration: CLI Version Command Test"
+        id: deno_test_version_command
         run: |
           echo "📋 Testing CLI version command..."
           output=$(./build/mikrus-linux --version)
@@ -285,6 +315,7 @@ jobs:
           echo "✅ Version command test passed"
 
       - name: "📄 Integration: CLI Generate Command Test"
+        id: deno_test_generate_command
         run: |
           echo "📄 Testing CLI generate command..."
           
@@ -321,6 +352,7 @@ jobs:
           rm -rf test-output
 
       - name: "🛡️ Integration: Security Validation Test"
+        id: deno_test_security_validation
         run: |
           echo "🛡️ Testing security validation..."
           
@@ -343,6 +375,7 @@ jobs:
           echo "✅ Security validation tests passed"
 
       - name: "⚡ Integration: Performance Baseline Test"
+        id: deno_test_performance_baseline
         run: |
           echo "⚡ Testing performance baseline..."
           
@@ -371,6 +404,7 @@ jobs:
     if: always()
     steps:
       - name: "✅ Notification: Success Status Report"
+        id: deno_ci_success_notification
         if: needs.deno-lint-and-format.result == 'success' && needs.deno-test.result == 'success' && needs.deno-build.result == 'success' && needs.deno-integration-test.result == 'success'
         run: |
           echo "✅ 🦕 Deno CI/CD Pipeline completed successfully!"
@@ -383,6 +417,7 @@ jobs:
           echo "🎉 Deno + Cliffy migration is working perfectly!"
 
       - name: "❌ Notification: Failure Status Report"
+        id: deno_ci_failure_notification
         if: needs.deno-lint-and-format.result == 'failure' || needs.deno-test.result == 'failure' || needs.deno-build.result == 'failure' || needs.deno-integration-test.result == 'failure'
         run: |
           echo "❌ 🦕 Deno CI/CD Pipeline failed!"
@@ -395,6 +430,7 @@ jobs:
           echo "Please check the logs above for detailed error information."
 
       - name: "📊 Notification: Performance & Size Report"
+        id: deno_ci_performance_report
         if: needs.deno-build.result == 'success'
         run: |
           echo "📊 Deno vs Node.js Comparison:"
