--- a/.github/workflows/deno-dependabot-auto-merge.yml
+++ b/.github/workflows/deno-dependabot-auto-merge.yml
@@ -21,14 +21,15 @@ jobs:
     steps:
       - name: "📊 Metadata: Extract Update Information"
         # Retrieves dependency update details (type, version change, dependency scope)
-        id: metadata
+        id: deno_dependabot_metadata
         uses: dependabot/fetch-metadata@dbb158d5c31b2b8bd1617a99da8524c8b2ebe5cb # v2.4.0
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: "✅ Auto-merge: Patch Updates (Safe)"
         # Automatically merges patch version updates (bug fixes) as they are low-risk
-        if: steps.metadata.outputs.update-type == 'version-update:semver-patch'
+        id: deno_dependabot_patch_merge
+        if: steps.deno_dependabot_metadata.outputs.update-type == 'version-update:semver-patch'
         run: |
           gh pr merge --auto --squash --delete-branch "$PR_URL"
         env:
@@ -37,7 +38,8 @@ jobs:
 
       - name: "🔄 Auto-merge: Dev Dependencies Minor Updates"
         # Auto-merges minor updates for development dependencies (tooling, testing)
-        if: steps.metadata.outputs.update-type == 'version-update:semver-minor' && steps.metadata.outputs.dependency-type == 'direct:development'
+        id: deno_dependabot_dev_minor_merge
+        if: steps.deno_dependabot_metadata.outputs.update-type == 'version-update:semver-minor' && steps.deno_dependabot_metadata.outputs.dependency-type == 'direct:development'
         run: |
           gh pr merge --auto --squash --delete-branch "$PR_URL"
         env:
@@ -46,7 +48,8 @@ jobs:
 
       - name: "🚨 Alert: Major Version Update Detected"
         # Flags major updates for manual review as they may contain breaking changes
-        if: steps.metadata.outputs.update-type == 'version-update:semver-major'
+        id: deno_dependabot_major_alert
+        if: steps.deno_dependabot_metadata.outputs.update-type == 'version-update:semver-major'
         run: |
           gh pr comment "$PR_URL" --body "🚨 Major version update detected. Please review manually before merging."
         env:
