--- a/.github/workflows/packages-distribution.yml
+++ b/.github/workflows/packages-distribution.yml
@@ -2,7 +2,10 @@ name: "📦 GitHub Packages Distribution"
 
 # Multi-platform binary distribution to GitHub Packages
 # Builds stable packages for Windows, Linux, macOS (x86_64 + ARM64)
-# Only triggers on stable version tags, stores latest version only
+# STABILITY RULES:
+# - Before v0.1.0: stable = no active code fix PRs (development phase)
+# - v0.1.0+ (pre-production milestone): stable = semantic versioning tags only
+# - v1.0.0+ (production): stable = semantic versioning tags only
 
 on:
   push:
@@ -32,10 +35,109 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  # Phase 0: Stability Check - Pre-1.0.0 stability validation
+  stability-check:
+    name: "🔍 Stability Validation"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
+    outputs:
+      is_stable: ${{ steps.stability_validation.outputs.is_stable }}
+      version: ${{ steps.stability_validation.outputs.version }}
+      
+    steps:
+      - name: "🏷️ Extract Version"
+        id: extract_version
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            VERSION="${{ github.event.inputs.version }}"
+          else
+            VERSION="${GITHUB_REF#refs/tags/v}"
+          fi
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: "🔍 Validate Stability Rules"
+        id: stability_validation
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION="${{ steps.extract_version.outputs.VERSION }}"
+          echo "🔍 Validating stability for version: $VERSION"
+          
+          # Check version format
+          if [[ ! "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "❌ Invalid version format: $VERSION (must be semantic: x.y.z)"
+            echo "is_stable=false" >> $GITHUB_OUTPUT
+            exit 1
+          fi
+          
+          # Parse version components
+          MAJOR=$(echo "$VERSION" | cut -d. -f1)
+          MINOR=$(echo "$VERSION" | cut -d. -f2)
+          PATCH=$(echo "$VERSION" | cut -d. -f3)
+          
+          echo "📊 Version components: $MAJOR.$MINOR.$PATCH"
+          
+          if [[ "$MAJOR" == "0" ]]; then
+            # Compare version with 0.1.0 milestone
+            VERSION_NUM=$(echo "$VERSION" | awk -F. '{printf "%d%02d%02d\n", $1, $2, $3}')
+            MILESTONE_NUM=100  # 0.1.0 = 000100
+            
+            if [[ "$VERSION_NUM" -lt "$MILESTONE_NUM" ]]; then
+              echo "🔍 Development phase (before v0.1.0) - checking for active fix PRs..."
+              
+              # Check for active PRs with fix patterns
+              ACTIVE_FIX_PRS=$(gh pr list \
+                --repo "${{ github.repository }}" \
+                --state open \
+                --json number,title,labels \
+                --jq '.[] | select(
+                  (.title | test("^(fix|bugfix|hotfix)"; "i")) or
+                  (.labels[]?.name | test("(fix|bug|hotfix)"; "i"))
+                ) | .number' | wc -l)
+              
+              echo "📊 Active fix PRs found: $ACTIVE_FIX_PRS"
+              
+              if [[ "$ACTIVE_FIX_PRS" -gt 0 ]]; then
+                echo "❌ STABILITY CHECK FAILED"
+                echo "   Development phase requires no active fix PRs for stability"
+                echo "   Found $ACTIVE_FIX_PRS active fix PR(s)"
+                echo "   Please merge or close fix PRs before releasing"
+                
+                # List the problematic PRs
+                echo "🔍 Active fix PRs:"
+                gh pr list \
+                  --repo "${{ github.repository }}" \
+                  --state open \
+                  --json number,title \
+                  --jq '.[] | select(.title | test("^(fix|bugfix|hotfix)"; "i")) | "  #\(.number): \(.title)"'
+                
+                echo "is_stable=false" >> $GITHUB_OUTPUT
+                exit 1
+              else
+                echo "✅ STABILITY CHECK PASSED - No active fix PRs (development)"
+                echo "is_stable=true" >> $GITHUB_OUTPUT
+              fi
+            else
+              echo "🚀 Pre-production milestone (v0.1.0+) - semantic versioning rules"
+              echo "✅ STABILITY CHECK PASSED - Pre-production milestone"
+              echo "is_stable=true" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "🎉 Post-1.0.0 version - standard semantic versioning rules apply"
+            echo "✅ STABILITY CHECK PASSED - Semantic versioning"
+            echo "is_stable=true" >> $GITHUB_OUTPUT
+          fi
+          
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
   # Phase 1: Build Matrix - Multi-platform binaries
   build-binaries:
     name: "🔨 Build ${{ matrix.platform.name }}"
     runs-on: ${{ matrix.platform.os }}
+    needs: stability-check
+    if: needs.stability-check.outputs.is_stable == 'true'
     permissions:
       contents: read
     
