fix: deno release

--- a/.github/workflows/deno-release.yml
+++ b/.github/workflows/deno-release.yml
@@ -55,7 +55,7 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           echo "📌 Processing tag: $TAG (version: $VERSION)"
 
-      - name: "🔍 Validate Stability Rules"
+      - name: "🔎 Validate Stability Rules"
         id: stability_validation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -152,6 +152,34 @@ jobs:
           deno-version: ${{ env.DENO_VERSION }}
           cache-hash: ${{ hashFiles('**/deno.json', '**/deno.lock') }}
 
+      - name: "🔧 Update Version in deno.json"
+        run: |
+          VERSION="${{ needs.stability-check.outputs.version }}"
+          echo "📝 Updating version in deno.json to: $VERSION"
+          
+          # Check if deno.json exists
+          if [[ ! -f "deno.json" ]]; then
+            echo "❌ deno.json file not found!"
+            exit 1
+          fi
+          
+          # Update version in deno.json
+          # Using jq to properly update JSON
+          if command -v jq &> /dev/null; then
+            # If jq is available, use it for proper JSON handling
+            jq --arg version "$VERSION" '.version = $version' deno.json > deno.json.tmp && mv deno.json.tmp deno.json
+          else
+            # Fallback to sed if jq is not available
+            # This assumes version is on its own line in format: "version": "x.x.x"
+            sed -i "s/\"version\":[[:space:]]*\"[^\"]*\"/\"version\": \"$VERSION\"/" deno.json
+          fi
+          
+          echo "✅ Version updated to $VERSION in deno.json"
+          
+          # Show the updated content for verification
+          echo "📋 Updated deno.json content (first 20 lines):"
+          head -n 20 deno.json
+
       - name: "📦 Cache Dependencies"
         run: |
           echo "📦 Caching Deno dependencies..."
@@ -201,7 +229,7 @@ jobs:
           # Create checksum
           sha256sum ./dist/mikrus-linux-x64 > ./dist/mikrus-linux-x64.sha256
           
-          echo "🔐 Checksum created"
+          echo "🔒 Checksum created"
 
       - name: "📤 Upload Binary Artifact"
         uses: actions/upload-artifact@v4
